bug 458924 - activate the DidResizeColumns mechanism when column widths changes in fixed layout. r/sr=dbaron